[gd_scene load_steps=8 format=3 uid="uid://bcwpy7kjmtuos"]

[ext_resource type="Script" uid="uid://b2uwpthyl5ogr" path="res://car.gd" id="1_a202f"]
[ext_resource type="CylinderMesh" uid="uid://b84ui51j36hfq" path="res://colors/wheel_color.tres" id="2_uoj53"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7822p"]
albedo_color = Color(0.627913, 0.918104, 1, 1)
metallic = 0.3
roughness = 0.6

[sub_resource type="BoxMesh" id="BoxMesh_a202f"]
material = SubResource("StandardMaterial3D_7822p")

[sub_resource type="BoxShape3D" id="BoxShape3D_noarx"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7822p"]

[sub_resource type="QuadMesh" id="QuadMesh_uoj53"]

[node name="Node3D" type="Node3D"]

[node name="Car" type="CharacterBody3D" parent="."]
script = ExtResource("1_a202f")
steering_angle = 40.0
steering_speed = 20.0
drift_steering_multiplier = 2.5

[node name="CarBody" type="MeshInstance3D" parent="Car"]
transform = Transform3D(2, 0, 0, 0, 1, 0, 0, 0, 4, 0, 0, 0)
mesh = SubResource("BoxMesh_a202f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Car"]
transform = Transform3D(2, 0, 0, 0, 1, 0, 0, 0, 4, 0, 0, 0)
shape = SubResource("BoxShape3D_noarx")

[node name="Wheels" type="Node3D" parent="Car"]

[node name="FrontLeft" type="MeshInstance3D" parent="Car/Wheels"]
transform = Transform3D(-4.85634e-08, -0.1, 0, 1.111, -4.37114e-09, 0, 0, 0, 1.111, -1.2, 0, -1)
mesh = ExtResource("2_uoj53")

[node name="FrontRight" type="MeshInstance3D" parent="Car/Wheels"]
transform = Transform3D(-4.85634e-08, 0.1, 0, -1.111, -4.37114e-09, 0, 0, 0, 1.111, 1.2, 0, -1)
mesh = ExtResource("2_uoj53")

[node name="RearLeft" type="MeshInstance3D" parent="Car/Wheels"]
transform = Transform3D(-4.85634e-08, -0.1, 0, 1.111, -4.37114e-09, 0, 0, 0, 1.111, -1.2, 0, 1)
mesh = ExtResource("2_uoj53")

[node name="RearRight" type="MeshInstance3D" parent="Car/Wheels"]
transform = Transform3D(-4.85634e-08, -0.1, 0, 1.111, -4.37114e-09, 0, 0, 0, 1.111, 1.2, 0, 1)
mesh = ExtResource("2_uoj53")

[node name="CameraPivot" type="Node3D" parent="Car"]
transform = Transform3D(0.999992, -0.00159085, 0.00369625, 0.000587399, 0.966405, 0.257023, -0.00398096, -0.257019, 0.966398, 0, 1.19574, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="Car/CameraPivot"]
spring_length = 8.0
margin = 0.5

[node name="Camera3D" type="Camera3D" parent="Car/CameraPivot/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 1.30474, 4.34152)
near = 0.1
far = 100.0

[node name="DriftParticles" type="GPUParticles3D" parent="Car"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.2, -2)
emitting = false
amount = 100
randomness = 0.5
trail_lifetime = 1.0
process_material = SubResource("ParticleProcessMaterial_7822p")
draw_pass_1 = SubResource("QuadMesh_uoj53")

[node name="BoostParticles" type="GPUParticles3D" parent="Car"]
